# GeoMath

./: .gitignore  CMakeLists.txt  GeoMathConfig.cmake  LinuxProject43.sln  LinuxProject43.vgdbcmake
CodeDB/LinuxProject43.vgdbcmake-Debug/: GeoMath.npa00  GeoMath.npd  GeoMath.rdb  GlobalFileTable.000  GlobalFileTable.001  codedb.lck  main.npd  main.rdb  tmp00000003.npa00
CodeDB/LinuxProject43.vgdbcmake-Debug.0001/: GeoMath.npa01  GeoMath.npd  GeoMath.rdb  main.npd  main.rdb  tmp00000003.npa01  tmp00000003.npd  tmp00000003.rdb
CodeDB/LinuxProject43.vgdbcmake-Release/: GeoMath.npa00  GeoMath.npd  GeoMath.rdb  GlobalFileTable.000  GlobalFileTable.001  codedb.lck  main.npd  main.rdb  tmp00000001.npa00  tmp00000003.npa00
CodeDB/LinuxProject43.vgdbcmake-Release.0001/: GeoMath.npd  GeoMath.rdb  main.npd  main.rdb  tmp00000004.npa00
VisualGDB/Debug/: BuildFiles.json  CMakeCache.txt  Cache.json  CodeModel.json  GeoMath  Makefile  cmake_install.cmake
VisualGDB/Release/: BuildFiles.json  Cache.json  CodeModel.json
VisualGDBCache/LinuxProject43-Debug-VisualGDB/SysprogsSyncCache/: 00.id
VisualGDBCache/LinuxProject43-Release-VisualGDB/: ImplicitCompilerFlags.xml
doc/: Doxyfile
doc/html/: _geo_math_8cpp.html  _geo_math_8h.html  _geo_math_8h_source.html  class_geo_math_1_1_route_template2_d.html  class_geo_math_1_1v2.html  class_geo_math_1_1v3.html  namespace_geo_math.html  struct_geo_math_1_1_route_template2_d_1_1_position.html  struct_geo_math_1_1_simple_figure3_d_1_1_position.html
doc/latex/: _geo_math_8cpp.tex  _geo_math_8h.tex  class_geo_math_1_1_route_template2_d.tex  class_geo_math_1_1v2.tex  class_geo_math_1_1v3.tex  namespace_geo_math.tex  struct_geo_math_1_1_route_template2_d_1_1_position.tex  struct_geo_math_1_1_simple_figure3_d_1_1_position.tex
lib_src/: GeoMath.cpp  GeoMath.h
modules/: Figure.cpp  Figure.h
src/: main.cpp  server.h
